Enabled backward compatibility for swagger codegen CLI